--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,8 +1,7 @@
-<div>
-    Line charts
-</div>
+<h2>Movie Management</h2>
 
 <mat-divider></mat-divider>
+<button type="button" class="btn btn-primary">Add New Movie</button>
 <div>
     <div>Line chart</div>
     <div>Line chart</div>
