--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,14 +33,14 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav [(opened)]="opened">
     <mat-nav-list>
-      <h3>Sidebar Contents</h3>
+      <h3>Dash board</h3>
       <ul>
         <li><a routerLink="/homes">Home</a></li>
         <li><a routerLink="/posts">Post</a></li>
         <li><a routerLink="/moviemanagements">Movie Management</a></li>
-        <li><a routerLink="/homes">Manage Movie Showtimes</a></li>
-        <li><a routerLink="/homes">Bill Management</a></li>
-        <li><a routerLink="/homes">Customers</a></li>
+        <li><a routerLink="/">Manage Movie Showtimes</a></li>
+        <li><a routerLink="/">Bill Management</a></li>
+        <li><a routerLink="/">Customers</a></li>
         <li><a routerLink="/">Content</a></li>
       </ul>
 
