--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <h2>Movie Management</h2>
 
 <mat-divider></mat-divider>
-<button type="button" class="btn btn-primary">Add New Movie</button>
+<button type="button" class="btn btn-primary">Add New </button>
 <div>
     <div>Line chart</div>
     <div>Line chart</div>
@@ -10,8 +10,5 @@
 </div>
 <mat-divider></mat-divider>
 
-<div>
-    <div>Table</div>
-    <div>Ple chart</div>
-</div>
+
 
