--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -8,6 +8,7 @@
     <div>Line chart</div>
     <div>Line chart</div>
     <div>Line chart</div>
+    <div>Line chart</div>
 </div>
 <mat-divider></mat-divider>
 
