--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -9,6 +9,8 @@
     <div>Line chart</div>
     <div>Line chart</div>
     <div>Line chart</div>
+    <div>Line chart</div>
+    s
 </div>
 <mat-divider></mat-divider>
 
